# Unil-sungen

./: programming_notes.txt
IPI_Einfuhrung_Praktische_Informatik/Blatt05/: loesung.cpp
IPI_Einfuhrung_Praktische_Informatik/Blatt06/: loesung.cc
IPI_Einfuhrung_Praktische_Informatik/Blatt07/: ringpuffer.cc  rpnrechner.cc  umgebungsvariablen.cc
IPK_Programmierkurs/Ubungsblatt04/: .gitignore
IPK_Programmierkurs/Ubungsblatt05/: loesung.cc
IPK_Programmierkurs/Ubungsblatt06/: CMakeCache.txt
IPK_Programmierkurs/Ubungsblatt06/Aufgabe1/: statistics.hh
IPK_Programmierkurs/Ubungsblatt06/Aufgabe2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
IPK_Programmierkurs/Ubungsblatt07/: main.cc  point.cc  point.hh  polygon.cc
IPK_Programmierkurs/Ubungsblatt07/Aufgabe1/: CMakeLists.txt
IPK_Programmierkurs/Ubungsblatt07/Aufgabe2/: CMakeLists.txt  canvas.cc  canvas.hh  plot.cc  testcorners.cc
IPK_Programmierkurs/Ubungsblatt08/Aufgabe2/templates/: CMakeLists.txt  statistics.hh
